<!--
  ~ Copyright 2017 Vladyslav Pohrebniakov
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Depressing Thoughts</string>

    <string name="settings">Settings</string>
    <string name="share">Share</string>

    <string name="test">Something</string>

    <string name="tap_here">Tap here to
                            \n read another depressing thought</string>

    <string name="title_developer_pref">Developer</string>
    <string name="summary_developer_pref">Vladyslav Pohrebniakov</string>
    <string name="summary_twitter_author_pref">\@Time4Depression</string>
    <string name="title_twitter_author_pref">Depressing thoughts by Twitter account</string>
    <string name="title_licenses_pref">Open source licenses</string>
    <string name="title_particles_pref">Show particles in background</string>
    <string name="title_about_category_pref">About</string>
    <string name="title_look_category_pref">Look</string>
    <string name="summary_about_pref">This is humor app. Don\'t be depressed.</string>

    <string name="no_internet">Is your Internet depressed too? Check its connection.</string>

    <string name="appwidget_text_loading">Loading…</string>
    <string name="next">Next</string>
    <string name="add_widget">Add widget</string>
    <string name="configure_app_widget_background_color">Background color</string>
    <string name="configure_app_widget_button_color">Button text color</string>
    <string name="configure_app_widget_text_color">Text color</string>
    <string name="preview_widget">Preview</string>
    <string name="preview_widget_text">Depressed widget</string>
    <string name="preview_widget_button">Depressed button</string>
    <string name="pref_title_themes">Use dark theme</string>
    <string name="pref_title_rate_the_app">Rate this app</string>


    <string-array name="widget_colors">
        <item>Dark</item>
        <item>Light</item>
        <item>Transparent</item>
        <item>Translucent Dark</item>
        <item>Translucent Light</item>
        <item>Pink</item>
        <item>Yellow</item>
        <item>Black</item>
        <item>White</item>
        <item>Red</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Teal</item>
        <item>Orange</item>
        <item>Brown</item>
        <item>Grey</item>
        <item>Blue Grey</item>
        <item>Indigo</item>
        <item>Green</item>
    </string-array>
</resources>
